flux/apps/nodered/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodered
  namespace: default
spec:
  selector:
    matchLabels:
      app: nodered
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nodered
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      containers:
        - name: nodered
          image: nodered/node-red:5.0.7
          resources:
            requests:
              cpu: 149m
              memory: 745Mi
            limits:
              # memory: 745Mi
          ports:
            - containerPort: 1880
          volumeMounts:
            - name: nodered-config
              mountPath: /data
            - name: media-music
              mountPath: /music
            - name: media-files
              mountPath: /nc-files
      volumes:
        - name: nodered-config
          nfs:
            server: datasphere
            path: /Root/Volumes/nodered
        # For SpotDL automation
        - name: media-music
          nfs:
            server: datasphere
            path: /Root/Media/Music
        # For CoffeeDB
        - name: media-files
          nfs:
            server: datasphere
            path: /Root/Files
