flux/apps/nodered/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodered
  namespace: default
spec:
  selector:
    app: nodered
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1880
