flux/apps/nodered/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nodered-local
  namespace: default
spec:
  entryPoints:
    - local
  routes:
    - match: Host(`nodered.home`)
      kind: Rule
      services:
        - name: nodered
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nodered-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nodered.arlodev.co.uk`)
      kind: Rule
      services:
        - name: nodered
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nodered-websecure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nodered.arlodev.co.uk`)
      kind: Rule
      services:
        - name: nodered
          port: 80
  tls:
    secretName: cert-nodered
